
For each release, a subsection should be added for each of the following if they are non-empty:

* `Added` for new features.
* `Changed` for changes in existing functionality.
* `Deprecated` for soon-to-be removed features.
* `Fixed` for any bug fixes.
* `Removed` for now removed features.
* `Security` in case of vulnerabilities.

== UNRELEASED

=== Changed

* Built with Gradle 4.8 and Kotlin DSL Plugin 0.17.5

== 0.6.2 (2018/04/12)

=== Changed

* Rebaseline core version to latest LTS due to link:https://jenkins.io/security/advisory/2018-04-11[2018-04-11 security advisory]
+
[cols="3*",options="header"]
|===
|Component
|From
|TO

|Core
|2.107.1
|2.107.2
|===

== 0.6.1 (2018/04/11)

=== Fixed

* Error logs and problems with JEP-200 with latest Jenkins 2.107.1 LTS release (see these blog posts - link:https://jenkins.io/blog/2018/01/13/jep-200/[2018/01/13/jep-200], link:https://jenkins.io/blog/2018/03/15/jep-200-lts[2018/03/15/jep-200-lts])

== 0.6.0 (2018/04/10)

=== Added

* All `org.jenkins-ci.modules` group dependencies from the `jenkins-war` dependency are included in integration tests.
  This should hopefully reduce a lot of the standard out error noise by Jenkins during tests.

=== Changed

* `javapoet`, `okhttp`, and `kotlin-logging` package version upgrades
* *Breaking* - all exposed extension properties have been changed to the link:https://docs.gradle.org/current/javadoc/org/gradle/api/provider/Property.html[`Property`] API.
  In Groovy, the existing DSL still works fine due to Gradle DSL decoration:
+
[source, groovy]
----
sharedLibrary {
  coreVersion = "2.114"
  testHarnessVersion = "2.32"
  pluginDependencies {
    workflowCpsPluginVersion = "2.4"
    workflowCpsGlobalLibraryPluginVersion = "2.9"
    dependency("io.jenkins.blueocean", "blueocean-web", "1.3.0")
  }
}
----
However if using the Kotlin DSL, you will need to use `.set` until link:https://github.com/gradle/kotlin-dsl/issues/380[kotlin-dsl/380] is resolved.
+
[source, kotlin]
----