@@ -83,6 +83,19 @@ jobs:
           name: Test With Gradle 4.7
       - *junit-platform-test-results
 
+  test-gradle-4.8:
+    <<: *java-8-defaults
+    steps:
+    - checkout
+    - *generate-cache-key
+    - *restore-home-cache
+    - attach_workspace:
+        at: ~/build-working-directory
+    - run:
+        command: ./gradlew build -PgradleTestVersions=4.8 --max-workers 2 --stacktrace
+        name: Test With Gradle 4.8
+    - *junit-platform-test-results
+
 workflows:
   version: 2
   build:
@@ -94,3 +107,6 @@ workflows:
       - test-gradle-4.7:
           requires:
             - check
+      - test-gradle-4.8:
+          requires:
+          - check
