@@ -170,7 +170,7 @@ dependencies {
 
 tasks {
   "wrapper"(Wrapper::class) {
-    gradleVersion = "4.8"
+    gradleVersion = "4.9"
     distributionType = Wrapper.DistributionType.ALL
   }
 
